force-app/main/default/objects/FEC_MDM_Channel__c/FEC_MDM_Channel__c.object-meta.xml
<CustomObject>
    <description>Là tính năng Channels Library thuộc module Business Configuration Tools trong Salesforce tại FEC. Channels Library dùng để liệt kê và quản lý các kênh tích hợp, hỗ trợ hệ thống bên ngoài truy xuất dữ liệu (Master Data, Nature of Case, trạng thái Case…).
Thông qua MyCase API, các hệ thống như Mobile App, Vymo, Pega có thể tạo Case trên New CSM; để thực hiện thao tác này, hệ thống cần được khai báo Channel tương ứng trong Channels Library.</description>
    <label>Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>