force-app/main/default/objects/FEC_MDM_Channel__c/fields/FEC_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel_ID__c</fullName>
    <description>Mã kênh</description>
    <externalId>true</externalId>
    <label>Channel ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>