force-app/main/default/objects/FEC_MDM_Channel__c/fields/FEC_Channel_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái kênh</description>
    <label>Channel Status</label>
    <type>Checkbox</type>
</CustomField>