force-app/main/default/objects/FEC_MDM_Channel__c/fields/FEC_Channel_Vietnamese_name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel_Vietnamese_name__c</fullName>
    <description>Tên kênh bằng tiếng Việt</description>
    <label>Channel Vietnamese Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>