force-app/main/default/objects/FEC_MDM_Channel__c/fields/FEC_Self_Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>FEC_Self_Service_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cờ đánh dấu có giới hạn dữ liệu được khai thác hay không</description>
    <label>Self-Service Flag</label>
    <type>Checkbox</type>
</CustomField>