force-app/main/default/objects/FEC_MDM_Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FEC_Channel_ID__c</columns>
    <columns>NAME</columns>
    <columns>FEC_Channel_Vietnamese_name__c</columns>
    <columns>FEC_Channel_Status__c</columns>
    <columns>FEC_Self_Service_Flag__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Channels</label>
</ListView>