force-app/main/default/objects/FEC_MDM_Channel__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>FEC_Channel_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>FEC_Channel_Vietnamese_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>